Readability improved, unnescesary code removed, some bugs fixed

--- a/flex/css/style.css
+++ b/flex/css/style.css
@@ -69,6 +69,7 @@ body {
 }
 
 .short-text{
+  max-height: 5vw;
   padding: 1vw;
   text-align: right;
   font-size: 1.2vw;
@@ -81,7 +82,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  flex: 8;
+  flex: 1;
   padding-right: 2vw;
   text-align: justify;
   font-size: 1.2vw;
@@ -101,6 +102,7 @@ body {
   justify-content: center;
   flex: 1;
   height: 100%;
+  width: 30vw;
   font-size: 1.5vw;
   background-color: #dff0d8;
   border: 0.1vw solid #000;
@@ -151,24 +153,6 @@ body {
   text-decoration: none;
 }
 
-@media (max-width: 768px) {
-  .menu, .header, .list {
-    font-size: 3vw;
-  }
-
-  .footer{
-    font-size: 2vw;
-  }
-
-  .menu {
-    flex: 0 0 25%;
-  }
-
-  .y {
-    margin-right: 10vw;
-  }
-}
-
 @media (max-width: 480px) {
   .menu {
     flex: 0 0 30%;
@@ -205,7 +189,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex: 1;
+    flex: 0 0 25%;
     padding: 1dvh;
     font-size: 1.9dvh;
     text-align: left;
@@ -256,11 +240,9 @@ body {
     flex-direction: row;
     flex: 4;
     max-width: 100%;
-    flex-wrap: wrap;
   }
 
   .left, .right {
-    /*flex-basis: 50%;*/
     box-sizing: border-box;
   }
 
@@ -281,7 +263,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 8;
+    flex: 4;
     padding: 1dvh 1dvh;
     text-align: justify;
     font-size: 1.7dvh;
@@ -349,9 +331,4 @@ body {
     align-items: center;
     gap: 2dvh;
   }
-
-  .references a {
-    text-decoration: none;
-  }
 }
-
